Fix overflow

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -44,7 +44,8 @@ footer, header, menu, nav, section {
 
 body {
     line-height: 1;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 ol, ul {
